--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -1,9 +1,9 @@
 {
   "lang": "zh",
-  "start": "开始游戏",
-  "normal": "普通模式",
-  "endless": "无尽模式",
-  "practice": "练习模式",
+  "start": "开始吃掉菩提子",
+  "normal": "普通吃菩提子",
+  "endless": "无尽吃菩提子",
+  "practice": "练习吃菩提子模式",
   "settings": "游戏设置",
   "img-before": "点击前图",
   "img-after": "点击后图",
@@ -15,7 +15,7 @@
   "ok": "确定",
   "name": "名字",
   "comment": "留言",
-  "eat-kano": "吃掉小鹿乃",
+  "eat-kano": "吃掉菩提子",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
   "game-title": "新概念音游",
@@ -25,25 +25,25 @@
   "no-ad-bad-lang": "禁广告/脏话(本项可不填)",
   "time-up": "时间到",
   "calculating": "计算中",
-  "score": "得分",
-  "best": "最佳",
+  "score": "吃掉的菩提子",
+  "best": "吃过最多的菩提子",
   "again": "重来",
   "home": "主页",
   "rank": "排行",
   "repo": "仓库",
-  "text-level-1": "试着好好练一下?",
-  "text-level-2": "TCL",
-  "text-level-3": "TQL",
-  "text-level-4": "您",
-  "text-level-5": "人?",
+  "text-level-1": "小菜鸡吃不了菩提子",
+  "text-level-2": "离吃掉菩提子还有些距离",
+  "text-level-3": "马上就要吃掉菩提子了",
+  "text-level-4": "吃掉菩提子的下半身了",
+  "text-level-5": "菩提子被您吃掉了",
   "time-over": "倒计时多了",
-  "rank-title": "吃掉小鹿乃-排行榜",
+  "rank-title": "吃掉菩提子-排行榜",
   "query-record": "查询记录",
   "day-rank": "排行榜[日]",
   "week-rank": "排行榜[周]",
   "month-rank": "排行榜[月]",
   "all-rank": "排行榜[总]",
-  "navbar-brand": "吃掉小鹿乃-排行榜",
+  "navbar-brand": "吃掉菩提子-排行榜",
   "daily-ranking": "日榜",
   "weekly-ranking": "周榜",
   "monthly-ranking": "月榜",
